deployment/eventstore-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.19.0 (f63a961c)
  creationTimestamp: null
  labels:
    io.kompose.service: eventstore
  name: eventstore
  namespace: sensrnet-backend
spec:
  ports:
  - name: "2113"
    port: 2113
    targetPort: 2113
  - name: "1113"
    port: 1113
    targetPort: 1113
  selector:
    io.kompose.service: eventstore
status:
  loadBalancer: {}
