deployment/registry-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: registry-backend
  name: registry-backend
  namespace: sensrnet-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: registry-backend
  strategy: {}
  template:
    metadata:
      labels:
        app: registry-backend
    spec:
      containers:
      - env:
        - name: EVENT_STORE_HOST
          value: eventstore-cluster
        - name: EVENT_STORE_PORT
          value: "1113"
        - name: JWT_SECRET
          value: example-secret-key
        - name: JWT_ACCESS_EXPIRES_IN
          value: "86400"
        - name: JWT_REFRESH_EXPIRES_IN
          value: "604800"
        - name: MONGO_DATABASE
          value: sensrnet
        - name: MONGO_HOST
          value: mongo
        - name: MONGO_PORT
          value: "27017"
        - name: NODE_ID
          value: node_1
        - name: PORT
          value: "3000"
        image: sensrnetregistry.azurecr.io/sensrnet/registry-backend:latest
        name: registry-backend
        ports:
        - containerPort: 3000
        resources: {}
      restartPolicy: Always
status: {}
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: registry-backend
  name: registry-backend
  namespace: sensrnet-backend
spec:
  ports:
  - port: 80
    targetPort: 3000
  selector:
    app: registry-backend
status:
  loadBalancer: {}
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: registry-backend-ingress
  namespace: sensrnet-backend
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/preserve-host: "true"
    traefik.backend.loadbalancer.stickiness: "true"
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: registry-backend
          servicePort: 80
        path: /api/
